# zephyr-pendulum

./: CMakeLists.txt  README.md  app.overlay  prj.conf
include/: control.h  driver.h
src/: control.c  driver.c  main.c
